# advent-of-code-2025

./: README.md  pyproject.toml
src/: runner.py  utils.py
src/Day01/: day01_a.py
src/Day02/: day02_a.py  day02_b.py
src/Day03/: day03_a.py  day03_b.py
src/Day04/: day04_a.py  day04_b.py
src/Day05/: day05_a.py  day05_b.py
src/Day06/: day06_a.py  day06_b.py
src/Day07/: day07_a.py  day07_b.py
src/Day08/: day08_a.py  day08_b.py
src/Day09/: day09_a.py  day09_b.py
src/Day10/: day10_a.py  day10_b.py
src/Day11/: day11_a.py  day11_b.py
src/Day12/: day12_a.py  day12_b.py  doubly_linked_list.py
